--- a/sobre.html
+++ b/sobre.html
@@ -6,13 +6,8 @@
            MusicDot | Sobre a empresa 
         </title>
         <link href="img/favicon.ico" rel="icon">
+        <link rel="stylesheet" href="css/sobre.css">
     </head>
-
-
-
-
-
-
 
     <body>
         <img src="img/logo.svg" alt="MusicDot">
