--- a/index.html
+++ b/index.html
@@ -5,13 +5,6 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>MusicDot</h1>
-        <h2>Bem-vindo à MusicDot, seu portal de cursos de música online.</h2>
-        <ul>
-            <li>Confira nossas promoções.</li>
-            <li>Receba informações sobre nossos lançamentos por email.</li>
-            <li>Navegue por todos nossos cursos disponíveis.</li>
-            <li>Aprenda sem sair de casa.</li>
-        </ul>
+        <h1>Página principal temporária da MusicDot</h1>
      </body>
 </html>
