--- a/sobre.html
+++ b/sobre.html
@@ -12,7 +12,7 @@
     <body>
         <img src="img/logo.svg" alt="MusicDot">
 
-        <h1> Sobre a empresa </h1>
+        <h1 class="titulo"> Sobre a empresa </h1>
 
         <p> A MusicDot é a maior escola online de música em todo o mundo.
             Fundada em 1932, possui estúdios em 124 países, sendo líder de mercado com mais de 90% de
@@ -31,7 +31,7 @@
 
         <p> Assine os cursos da MusicDot. Acesse <a href="index.html"> nosso site </a> ou entre em contato se tiver dúvidas. Conheça também <a href="#historia"> nossa história </a> e <a href="#diferenciais"> nossos diferenciais </a>.</p>
 
-        <h2 id="historia"> História </h2>
+        <h2 id="historia" class="subtitulo"> História </h2>
 
         <figure class="familia-tupfeln">
             <img src="img/familia-tupfeln.jpg" alt="Foto da família tüpfeln">
@@ -59,6 +59,9 @@
             <li> Presente em 124 países </li>
             <li> Mais de um milhão de funcionários em todo o mundo </li>
         </ul>
+
+        <h2 class="titulo"> Contato </h2>
+        
     </body>
 
 </html>
