--- a/sobre.html
+++ b/sobre.html
@@ -62,7 +62,7 @@
         </ul>
 
         <h2 class="titulo"> Contato </h2>
-        <div class="contato__secao">
+        <div id="contato" class="contato__secao contato__secao--telefone">
             <h3 class="contato__subtitulo"> Correspondência </h3>
             <small> (todos os dias, das 9h às 18h) </small>
 
