--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>MusicDot</title>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <title>Musicdot</title>
+        <link rel="icon" href="img/favicon.ico">
     </head>
+    
     <body>
-        <h1>Página principal temporária da MusicDot</h1>
+        <header>
+            <a href="index.html">
+                <img src="img/musicdot-logo-light.svg" title="Ir para a página inicial da Musicdot" alt="Musicdot">
+            </a>
+
+            <nav>
+                <ul>
+                    <li> <a href="sobre.html#contato"> Contato </a> </li>
+                    <li> <a href="#"> Entrar </a> </li>
+                    <li> <a href="#"> Matricule-se </a> </li>
+                </ul>
+            </nav>
+        </header>
+
+        <main>
+            Conteúdo principal
+        </main>
+
+        <footer>
+            Rodapé
+        </footer>
      </body>
 </html>
